k8s/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: sahil-namespace
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: pundirsahil/jobportal-backend
        ports:
        - containerPort: 8000
