k8s/mongodb-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
  namespace: sahil-namespace
  labels:
    app: mongodb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb-container
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-storage  
          mountPath: /data/db
      volumes:  
      - name: mongodb-storage  
        persistentVolumeClaim:
          claimName: mongodb-pvc
